--- a/Main_Page/Profile_main.html
+++ b/Main_Page/Profile_main.html
@@ -169,7 +169,7 @@
     <nav class="nav1">
       <ul>
         <li><span>_im@Aritra_</span></li>
-        <li><a id="a1" href="http://127.0.0.1:5500/My_Profile/MY_PROFILE_2/Main_Page/Profile_main.html">HOME</a></li>
+        <li><a id="a1" href="https://aritra-basak.github.io/sample/Main_Page/Profile_main.html">HOME</a></li>
         <li><a id= "a2" href="https://aritra-basak.github.io/sample/About_page/about_page.html" target="blank">ABOUT</a></li>
         <li><a id="a4" href="https://aritra-basak.github.io/sample/Skills/skill_page.html" target="blank">SKILLS</a></li>
         <li><a id="a3" href="https://aritra-basak.github.io/sample/Contact_page/contact_page.html" target="blank">CONTACT</a></li>
